# 3DTilesetConversionServer

./: .gitignore  Cargo.toml  package-lock.json  package.json
rust_fetcher/: Cargo.toml
rust_fetcher/src/: main.rs
rust_implementation/: package.json
rust_implementation/src/: lib.rs
rust_server/: Cargo.toml
rust_server/src/: leftovers.rs  main.rs
rust_server/test/: 3D-tiles-1_0.json
src/: leftovers.rs  lib.rs  main.rs
test/: 3D-tiles-1_0.json  3D-tiles_1_1.json
