[package]
name = "tileset_conversion_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] } #reqwest = "0.11.24"
num_cpus = "1.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"


